# SenseVoice

./: .gitignore  demo.py  demo_funasr.py  export_meta.py  model.py  pyproject.toml  webui.py
